# convergence

./: .gitignore  AGENTS.md  Cargo.toml  README.md  effigy.toml  package.json
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: 01-concepts-and-object-model.md  04-superpositions-and-resolution.md  09-security-identity-and-permissions.md  10-cli-and-tui.md  12-gate-graph-schema.md  README.md  prototype-gate-chain.md  prototype-snap-capture.md
docs/contracts/: 001-working-rules.md
docs/decisions/: 2026-01-23-093608-resolution-mvp-variant-index.md
docs/git-podcast/: README.md
docs/logs/: README.md
scripts/: agent-trace-report.js  run-converge-server.js  run-converge.js  run-tests.js
src/: cli_commands.rs  cli_exec.rs  cli_runtime.rs  cli_subcommands.rs  lib.rs  main.rs  model.rs  remote.rs  resolve.rs  store.rs  tui.rs  tui_remote_legacy.rs  tui_shell.rs  workspace.rs
tests/: approvals_required.rs  bundle_promotability.rs  cli_help_surface.rs  cli_remote_gc_prune.rs  e2e_release_fetch_restore_diff.rs  local_snap_store.rs  metadata_only_publications.rs  phase3_e2e_bundle_promote_blocked.rs  phase8_variant_keys_order_independent.rs  promotion_mechanics.rs  remote_module_composition.rs  resolution_provenance.rs  resolve_validate.rs  server_api_contract.rs  server_bootstrap.rs  server_gc_release_retention.rs  server_lane_heads.rs  server_lane_retention.rs  server_persistence.rs  server_release_persistence.rs  server_release_prune.rs  server_routes_smoke.rs  server_tokens.rs  upload_integrity.rs
(+530 files in other folders)
